# adventofcode2020

./: README.md  _config.yml  archives.html  authors.html  categories.html  generate_static_page.py  index.html  index.md  pelicanconf.py  pyproject.toml  table-of-content.html  tags.html
02/: solve_01.py  solve_02.py
03/: solve_02.py  test_02.py
04/: test_01.py
05/: solve_01.py  solve_02.py  test_01.py
author/: sebschneid.html
category/: misc.html
feeds/: all.atom.xml  misc.atom.xml
generator/templates/: day.md
pages/: day-1.html
solutions/01/: 01.py  02.py
solutions/02/: test_01.py  test_02.py
solutions/03/: solve_01.py  test_01.py
solutions/04/: solve_01.py  solve_02.py  test_02.py
solutions/06/: solve_01.py  solve_02.py  test_01.py  test_02.py
solutions/07/: solve_01.py  solve_02.py  test_01.py  test_02.py
solutions/08/: console.py  solve_01.py  solve_02.py  test_01.py  test_02.py
