[tool.poetry]
name = "aoc20"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.4"
numpy = "^1.19.4"
rich = "^9.2.0"
pydantic = "^1.7.3"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
ipython = "^7.19.0"
black = "^20.8b1"
flake8 = "^3.8.4"
isort = "^5.6.4"
mypy = "^0.790"
pytest = "^6.1.2"
pelican = "^4.5.3"
ghp-import = "^1.0.0"
Markdown = "^3.3.3"

[tool.black]
line-length = 80
target-version = ["py38"]

[mypy]
python_version = 3.8
no_implicit_optional = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
